--- a/src/Components/header/header.css
+++ b/src/Components/header/header.css
@@ -34,15 +34,12 @@ header{
     background: var(--primary);
 }
 .me{
-    background: linear-gradient(var(--primary), transparent);
-    width: 18rem;
-    height:22rem;
+    
+    width: 30rem;
+    height: auto;
     position: absolute;
-    left: calc(53% - 11rem);
-    margin-top: 4rem;
-    border-radius: 12rem 12rem 0 0;
-    overflow: hidden;
-    padding: 2rem 1.5rem 1.5rem 1.5rem;
+    left: calc(45% - 11rem);
+    padding: 0rem 1.5rem 1.5rem 1.5rem;
     text-align: center;
 }
 
@@ -84,7 +81,7 @@ header{
 @media screen and (max-width:450px){
     .me{
         position: absolute;
-        left: calc(53% - 10rem);
+        left: calc(30% - 10rem);
     }
 }
 
